# inplace_vector

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
benchmarks/: CMakeLists.txt  access_benchmark.cpp  pushback_benchmark.cpp
cmake/: beman.inplace_vector-config.cmake.in
examples/: CMakeLists.txt  capacity.cpp  comparison.cpp  fallible.cpp  fibonacci.cpp
include/beman/inplace_vector/: CMakeLists.txt  config.hpp  config.hpp.in  config_generated.hpp.in  inplace_vector.hpp
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/inplace_vector/: CMakeLists.txt  README.md  compare.test.cpp  constexpr.test.cpp  constructors.test.cpp  constructors_fs.test.cpp  container_requirements.test.cpp  container_requirements_fs.test.cpp  erasure.test.cpp  freestanding.test.cpp  gtest_setup.hpp  inplace_vector.test.cpp  modifiers.test.cpp  modifiers_fs.test.cpp  noexceptions.test.cpp  ref_impl.test.cpp  size_n_data.test.cpp  size_n_data_fs.test.cpp  spec.test.cpp  spec.test2.experimental.cpp  template.test.cpp  triviality.test.cpp
